fixed spacing

--- a/PokePro/styles/style.css
+++ b/PokePro/styles/style.css
@@ -24,12 +24,12 @@ nav a:hover {
     background-color: #2bb6c2;
 }
 
-/* Hero Image */
+/* Hero */
 .hero{
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-
+    height: 600px;
     text-align: center;
 }
 .hero img{
@@ -55,8 +55,7 @@ nav a:hover {
     text-align: center;
     margin-left: 4em;
     margin-right: 4em;
-    margin-bottom: 5em;
-    margin-top: 5em;
+    margin-bottom: 3em;
     font-family: "Roboto Condensed", sans-serif;
     font-size: 1.5em;
 }
@@ -93,3 +92,6 @@ footer a:hover {
 footer img{
     width: 75px;
 }
+
+
+/* * { border: 1px solid red; } */
